<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zed.livetales.LoginSignupActivity">

    <!-- main container -->
    <android.support.constraint.ConstraintLayout
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="364dp"
        android:layout_height="650dp">

        <!-- background image -->

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@mipmap/bg_popups"
            android:id="@+id/imageView"
            android:contentDescription="@string/empty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:adjustViewBounds="true"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" />

        <!-- Login container -->

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="279dp"
            android:id="@+id/constraintLayout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:background="@android:color/background_light">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/header_login"
                android:id="@+id/imageView2"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="1.0" />

            <TextView
                android:text="@string/login_signup_view_login"
                android:layout_width="74dp"
                android:layout_height="33dp"
                android:id="@+id/textView10"
                app:layout_constraintRight_toRightOf="@+id/imageView2"
                app:layout_constraintLeft_toLeftOf="@+id/imageView2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#AC5538"/>

            <TextView
                android:text="@string/login_signup_view_user"
                android:layout_width="127dp"
                android:gravity="center"
                android:id="@+id/textView4"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="29dp"
                android:textColor="#E3A74E"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:layout_width="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/empty"
                android:contentDescription="@string/empty"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_height="30dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxLines="1"
                android:background="@mipmap/text_box"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="8dp" />

            <TextView
                android:text="@string/login_signup_view_password"
                android:layout_width="160dp"
                android:gravity="center"
                android:id="@+id/textView5"
                android:textStyle="normal|bold"
                android:layout_height="29dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAlignment="center"
                android:textColor="#E3A74E"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_marginTop="8dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:contentDescription="@string/empty"
                android:ems="10"
                android:id="@+id/editText2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxLines="1"
                android:background="@mipmap/text_box"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="8dp" />

            <Button
                android:text="@string/login_signup_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                android:layout_marginTop="8dp" />
        </android.support.constraint.ConstraintLayout>

        <!-- Signup container -->
        <android.support.constraint.ConstraintLayout
            android:layout_width="364dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/imageView"
            android:background="@android:color/background_light"
            android:layout_height="340dp">

            <!-- header -->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/header_signup"
                android:id="@+id/imageView3"
                android:adjustViewBounds="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- fields -->
            <TextView
                android:text="@string/login_signup_view_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#AC5538"/>

            <TextView
                android:text="@string/login_signup_view_user"
                android:layout_width="74dp"
                android:id="@+id/textView7"
                android:gravity="center"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="#E3A74E"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:layout_height="29dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:text="@string/empty"
                android:ems="10"
                android:id="@+id/editText3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxLines="1"
                android:background="@mipmap/text_box"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:text="@string/login_signup_view_password"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:gravity="center"
                android:id="@+id/textView8"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="#E3A74E"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxLines="1"
                android:background="@mipmap/text_box"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:text="@string/login_signup_view_repeat_password"
                android:layout_width="114dp"
                android:id="@+id/textView9"
                android:gravity="center"
                android:layout_height="29dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="#E3A74E"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxLines="1"
                android:background="@mipmap/text_box"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:text="@string/login_signup_view_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
